--- a/ProfSite/Views/Shared/_LayoutBravecto.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravecto.cshtml
@@ -81,7 +81,7 @@
                             </a>
                         </li>
                         <li class="@(ViewBag.SelectedNode == "socialtips" ? "active" : "")">
-                            <a href="/bravecto/social-tips">
+                            <a href="/socialtips">
                                 Social Tips
                             </a>
                         </li>
