--- a/ProfSite/Views/Bravecto/facebook.cshtml
+++ b/ProfSite/Views/Bravecto/facebook.cshtml
@@ -39,8 +39,28 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 social-content-column">
             <h3>LATEST SOCIAL CONTENT</h3>
+            <div class="item">
+                <h4>LOREM IPSUM DOLOR SIT</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget rutrum augue, volutpat facilisis enim. Pellentesque porttitor eleifend felis eget varius. Aliquam interdum convallis nulla, non bibendum arcu auctor vel. Mauris quis lacinia nibh. Donec faucibus rutrum interdum
+                </p>
+                <a href="#" class="share-this">
+                    Share this
+                    <i class="icon icon-share"></i>
+                </a>
+            </div>
+            <div class="item">
+                <h4>LOREM IPSUM DOLOR SIT</h4>
+                <p>
+                    <img src="~/Content/img/Bravecto_BravoPets_videothumb.jpg" />
+                </p>
+                <a href="#" class="share-this">
+                    Share this
+                    <i class="icon icon-share"></i>
+                </a>
+            </div>
         </div>
     </div>
 </div>
