--- a/ProfSite/Views/Bravecto/Partials/PhotoUpdate.cshtml
+++ b/ProfSite/Views/Bravecto/Partials/PhotoUpdate.cshtml
@@ -19,7 +19,7 @@
                 @Model.Caption
             </div>
         </div>
-        @Html.Partial("Comments", Model)
+        @Html.Partial("Partials/Comments", Model)
     </div>
     <div class="social-feed-icons">
         <a href="@Model.Id" class="btn-social fb-like-post" role="like" data-unliketext="@bvResources.Facebook_LinkUpdate_UnLikePost"><span>@bvResources.Facebook_LinkUpdate_LikePost</span></a>
