--- a/ProfSite/Views/Bravecto/Partials/StatusUpdate.cshtml
+++ b/ProfSite/Views/Bravecto/Partials/StatusUpdate.cshtml
@@ -10,7 +10,7 @@
         <div class="share-wrapper">
             @Html.Raw(Model.Message)
         </div>
-        @Html.Partial("Comments",Model)
+        @Html.Partial("Partials/Comments", Model)
     </div>
     <div class="social-feed-icons">
         <a href="@Model.Id" class="btn-social fb-like-post" role="like" data-unliketext="@bvResources.Facebook_LinkUpdate_UnLikePost"><span>@bvResources.Facebook_LinkUpdate_LikePost</span></a>
