--- a/ProfSite/Views/Bravecto/linked-accounts.cshtml
+++ b/ProfSite/Views/Bravecto/linked-accounts.cshtml
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <div class="social-container facebook">
+            <div id="facebook-feed" class="social-container facebook">
                 <h2>
                     <img src="~/Content/img/fb-icon-lg.png" />
                     FACEBOOK
