--- a/ProfSite/Views/Bravecto/Partials/LinkUpdate.cshtml
+++ b/ProfSite/Views/Bravecto/Partials/LinkUpdate.cshtml
@@ -30,7 +30,7 @@
 
 
         </div>
-        @Html.Partial("Comments", Model)
+        @Html.Partial("Partials/Comments", Model)
     </div>
     <div class="social-feed-icons">
         <a href="@Model.Id" class="btn-social fb-like-post" role="like" data-unliketext="@bvResources.Facebook_LinkUpdate_UnLikePost"><span>@bvResources.Facebook_LinkUpdate_LikePost</span></a>
