--- a/ProfSite/Views/Shared/_LayoutBravoPets.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravoPets.cshtml
@@ -15,10 +15,8 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     -->
     <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/36b782c8-14a6-42ac-b9e8-820a1ab045fd.css" />
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css", "~/content/bravopetscss")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="~/Content/bravectohome.css" rel="stylesheet" />
-    <link href="~/Content/bravopets.css" rel="stylesheet" />
     @RenderSection("head", false)
 </head>
 <body>
