page deletion and new links

--- a/ProfSite/Views/Shared/_LayoutBravoPets.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravoPets.cshtml
@@ -45,8 +45,8 @@
                             FAQs
                         </a>
                     </li>
-                    <li class="@(ViewBag.SelectedNode == "aboutus" ? "active" : "")" role="presentation"><a href="/bravecto/about-us">ABOUT US</a></li>
-                    <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
+                    @*<li class="@(ViewBag.SelectedNode == "aboutus" ? "active" : "")" role="presentation"><a href="/bravecto/about-us">ABOUT US</a></li>
+                    <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>*@
                 </ul>
             </nav>
             <a href="/bravopets/index" class="navbar-brand bravopets">
